fix image 404 in readability

--- a/source/assets/storage/readability-0.5.1/css/readability.css
+++ b/source/assets/storage/readability-0.5.1/css/readability.css
@@ -51,6 +51,7 @@
 #readFooter {
 	display: block;
 	border-top: 1px solid #333;
+  padding: 3px 1em 0 1em;
 	text-align: center;
 	clear: both;
 }
@@ -59,7 +60,6 @@ div.footer-right {
 	line-height: 1;
 	text-align: right;
 	font-size: .75em;
-	margin-top: 18px
 }
 a.footer-twitterLink {
 	clear: both;
@@ -69,7 +69,11 @@ a.footer-twitterLink {
 	margin-top: -32px;
 }
 span.version {
-	display: none;
+  display: none;
+}
+span.version a, a:hover {
+  text-decoration: none !important;
+  color: #333  !important;
 }
 
 /* Article Tools */
@@ -96,13 +100,13 @@ span.version {
     background: url(../images/read-kindle.png) no-repeat left top;
 }
 #email-page{
-    background: url(http://lab.arc90.com/experiments/readability/images/read-email.png) no-repeat left top;
+    background: url(../images/read-email.png) no-repeat left top;
 }
 #reload-page{
-    background: url(http://lab.arc90.com/experiments/readability/images/read-refresh.png) no-repeat left top;
+    background: url(../images/read-refresh.png) no-repeat left top;
 }
 #print-page{
-    background: url(http://lab.arc90.com/experiments/readability/images/read-print.png) no-repeat left top;
+    background: url(../images/read-print.png) no-repeat left top;
 }
 #readTools a:hover{
     opacity: 1;
